Tue May  5 17:33:06 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/DDS/DDS_Utility.h:
        
          Temporary workaround for the fact that OpenSpliceDDS's
          register_type() won't accept any scoping in the type name.

Mon May  4 19:53:08 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/DDS/dsto_dds.mpc:
        
          Fixed typo in library name.

Mon May  4 19:40:48 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/SubApp.cpp:
        * cuts/arch/dsto/DDS/SubAppDDS.cpp:
        
          Fixed case errors in #includes.
        
Mon May  4 19:15:48 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * cuts/arch/dsto/DDS/PubAppDDS.cpp:
        * cuts/arch/dsto/DDS/SubAppDDS.cpp:
        * cuts/arch/dsto/DDS/PubAppDDS.h:
        * cuts/arch/dsto/DDS/SubAppDDS.h:
        
          New files.
          
        * cuts/arch/dsto/PubApp.cpp:
        
          Fixed case error in #include

Thu Apr 30 18:28:26 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.h:
        * examples/arch/tcpip/HelloWorld/HelloWorld_svnt.cpp:

          . Simplified the servant code.

Thu Apr 30 18:19:46 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/arch/tcpip/TCPIP.mpc:
        * cuts/arch/tcpip/TCPIP_ComponentServer.h:
        * cuts/arch/tcpip/TCPIP_ComponentServer.inl:
        * cuts/arch/tcpip/TCPIP_ComponentServer.cpp:
        * cuts/arch/tcpip/TCPIP_Connector.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.inl:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint.cpp:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.h:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.inl:
        * cuts/arch/tcpip/TCPIP_Remote_Endpoint_T.cpp:

          . Extracted the *endpoint* code for connecting to a remote